aoc day 12, part 2