@@ -3,8 +3,8 @@ package twenty.day.twelve;
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 class NavigationInstructionReader {
 
@@ -15,10 +15,10 @@ class NavigationInstructionReader {
                             InstructionType.valueOf(String.valueOf(s.charAt(0))),
                             Integer.valueOf(s.substring(1))
                     ))
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
             e.printStackTrace();
         }
-        return null;
+        return Collections.emptyList();
     }
 }
